<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">سامانه سلامت</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">به سامانه سلامت خوش آمدید!</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="registered_before">قبلا ثبت نام کرده ام</string>
    <string name="back">بازگشت</string>
    <string name="send">ارسال</string>
    <string name="menu">منوی کاربری</string>


    <string name="username">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="email">ایمیل</string>
    <string name="passwordRepeat">تکرار کلمه عبور</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="nationalID">کد ملی</string>

    <string name="deliver_add">ثبت تحویل دارو</string>

    <string name="error">خطا</string>
    <string name="invalid_form"> لطفا اطلاعات فرم را به دقت پر کنید</string>
    <string name="not_matched_password"> کلمه عبور و تکرار آن مطابقت ندارد</string>
    <string name="invalid_username">این نام کاربری قبلا استفاده شده است</string>
    <string name="user_not_found">نام کاربری مورد نظر یافت نشد.</string>
    <string name="password_wrong">کلمه عبور صحیح نیست.</string>
    <string name="not_actived_yet">وضعیت ثبت نام شما هنوز توسط مدیر سامانه تایید نشده است.</string>

    <string name="find_prescription">پیدا کردن نسخه</string>
    <string name="prescription">نسخه</string>

    <string name="expert">پزشک متخصص</string>
    <string name="doctor">پزشک عمومی</string>
    <string name="patient">بیمار</string>
    <string name="drugstore">داروخانه</string>
    <string name="admin">مدیر سامانه</string>

    <string-array name="roles_array">
        <item>@string/patient</item>
        <item>@string/doctor</item>
        <item>@string/expert</item>
        <item>@string/drugstore</item>
        <item>@string/admin</item>
    </string-array>

    <string name="pending">در انتظار</string>
    <string name="rejected">رد شده</string>
    <string name="accepted">تایید شده</string>

    <string-array name="registration_status_array">
        <item>@string/pending</item>
        <item>@string/rejected</item>
        <item>@string/accepted</item>
    </string-array>

    <string name="select">انتخاب</string>
    <string name="current_doctor">پزشک فعلی</string>
    <string name="select_doctor">انتخاب/تغییر پزشک</string>
    <string name="select_drug">انتخاب دارو</string>

    <string name="expert_menu">منوی پزشک متخصص</string>
    <string name="doctor_menu">منوی پزشک </string>
    <string name="patient_menu">منوی بیمار</string>
    <string name="drugstore_menu">منوی داروخانه</string>
    <string name="admin_menu">منوی مدیر سامانه</string>

    <string name="edit_info">تغییر مشخصات</string>
    <string name="messages">پیام ها</string>
    <string name="exit">خروج</string>
    <string name="consultant">مشاوره</string>
    <string name="requests">درخواست ها</string>
    <string name="my_patients">بیماران من</string>
    <string name="my_doctor">پزشک من</string>
    <string name="my_history">سوابق من</string>
    <string name="medical_history">سوابق پزشکی</string>
    <string name="sickness_history">سوابق بیماری</string>
    <string name="add_physical_activity">ثبت فعالیت بدنی</string>
    <string name="managing_drugs_delivery">مدیریت تحویل دارو</string>
    <string name="deliver_drugs">تحویل دارو</string>
    <string name="drugs_list">لیست دارو ها</string>
    <string name="expert_list">لیست پزشکان متخصص</string>


    <string name="users">کاربران سامانه</string>

    <string name="physical_state_history">سوابق وضعیت جسمانی</string>
    <string name="physical_state">وضعیت جسمانی</string>
    <string name="add_physical_state_btn">ثبت وضعیت جسمانی</string>
    <string name="physical_state_report">گزارش پزشکی</string>

    <string name="add_sickness_record">ایجاد سابقه بیماری جدید</string>
    <string name="addConsultant">ایجاد مشاوره جدید</string>
    <string name="consultantWithDoctor">مشاوره با پزشک</string>
    <string name="consultantWithPatient">مشاوره با بیمار</string>
    <string name="your_message">پیام شما</string>
    <string name="finish">پایان دادن</string>
    <string name="send_message">ارسال پیام</string>
    <string name="subject">موضوع</string>
    <string name="detail">شرح</string>
    <string name="audience">مخاطب</string>
    <string name="approve">تایید</string>
    <string name="disapprove">ررد</string>

    <string name="my_patients_list">لیست بیماران تحت نظر</string>
    <string name="patients_list">لیست بیماران</string>
    <string name="my_doctors_list">لیست پزشکان ناظر</string>
    <string name="doctors_list">لیست پزشکان</string>
    <string name="drugstores_list">لیست داروخانه ها</string>

    <string name="start">شروع</string>
    <string name="finish1">پایان</string>

    <string name="medical_records">سوابق پزشکی</string>
    <string name="finish_supervision">پایان نظارت</string>
    <string name="reference">ارجاع به پزشک دیگر</string>
    <string name="patient_doctors">پزشکان ناظر بر بیمار</string>

    <string name="add_prescription">افزودن نسخه</string>
    <string name="prescription_list">لیست نسخه ها</string>
    <string name="answer">پاسخ</string>

</resources>
