<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding">


    <TextView
            android:text="@string/patient_menu"
            android:id="@+id/expert_menu"
            style="@style/title_style"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="EditInfoActivity"
            style="@style/btn_style"
            android:text="@string/edit_info"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="MessagesActivity"
            style="@style/btn_style"
            android:text="@string/messages"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="ExitActivity"
            style="@style/btn_style"
            android:text="@string/exit"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="ConsultantActivity"
            style="@style/btn_style"
            android:text="@string/consultant"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="MyDoctorActivity"
            style="@style/btn_style"
            android:text="@string/my_doctor"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="MyHistoryActivity"
            style="@style/btn_style"
            android:text="@string/my_history"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />


    <com.beardedhen.androidbootstrap.BootstrapButton
            android:tag="AddPhysicalActivity"
            style="@style/btn_style"
            android:text="@string/add_physical_activity"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />


</LinearLayout>
