<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding">


    <TextView
            android:text="@string/drugstore_menu"
            android:id="@+id/expert_menu"
            style="@style/title_style"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/edit_info_btn"
            style="@style/btn_style"
            android:text="@string/edit_info"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/messages_btn"
            style="@style/btn_style"
            android:text="@string/messages"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/exit_btn"
            style="@style/btn_style"
            android:text="@string/exit"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/managing_drugs_btn"
            style="@style/btn_style"
            android:text="@string/managing_drugs"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />


</LinearLayout>
