<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding">


    <TextView
            android:text="@string/welcome"
            android:id="@+id/textView"
            style="@style/title_style"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/register"
            style="@style/btn_style"
            android:text="@string/register"
            bootstrap:bb_icon_right="fa-users"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />
    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/registered_before"
            android:text="@string/registered_before"
            style="@style/btn_style"
            bootstrap:bb_icon_right="fa-user"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />



</LinearLayout>
