<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding">


    <TextView
            android:id="@+id/title"
            style="@style/title_style"
            />


    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/medical_records"
            android:text="@string/medical_records"
            android:tag="MedicalRecordsActivity"
            style="@style/btn_style"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />


    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/finish_supervision"
            android:text="@string/finish_supervision"
            style="@style/btn_style"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/reference"
            android:text="@string/reference"
            android:tag="ReferenceActivity"
            style="@style/btn_style"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />


    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/patient_doctors"
            android:text="@string/patient_doctors"
            android:tag="PatientDoctorsActivity"
            style="@style/btn_style"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            android:onClick="onMenuBtnPress"
            />



</LinearLayout>
