<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding"
              android:id="@+id/container">


    <TextView
            style="@style/title_style"
            android:text="@string/login"
            />

    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/username"
            android:hint="@string/username"
            bootstrap:be_roundedCorners="true"
            bootstrap:be_state="primary"
            style="@style/edit_text_style"
            />


    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/password"
            android:hint="@string/password"
            style="@style/edit_text_style"
            bootstrap:be_roundedCorners="true"
            bootstrap:be_state="primary"
            />


    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="22sp">

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/login"
                android:text="@string/login"
                style="@style/btn_style"
                android:layout_marginRight="11sp"
                bootstrap:bb_icon_right="fa-check"
                bootstrap:bb_type="success"
                bootstrap:bb_roundedCorners="true"
                android:layout_weight="1"
                />
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/back"
                android:text="@string/back"
                style="@style/btn_style"
                android:layout_marginLeft="11sp"
                bootstrap:bb_icon_right="fa-arrow-left"
                bootstrap:bb_type="danger"
                bootstrap:bb_roundedCorners="true"
                android:layout_weight="1"
                />
    </LinearLayout>


</LinearLayout>
