<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding">


        <TextView
                android:text="@string/admin_menu"
                style="@style/title_style"
                />

        <!--<com.beardedhen.androidbootstrap.BootstrapButton-->
        <!--android:id="@+id/edit_info_btn"-->
        <!--style="@style/btn_style"-->
        <!--android:text="@string/edit_info"-->
        <!--bootstrap:bb_type="primary"-->
        <!--bootstrap:bb_roundedCorners="true"-->
        <!--android:layout_marginTop="22sp"-->
        <!--/>-->

        <!--<com.beardedhen.androidbootstrap.BootstrapButton-->
        <!--android:id="@+id/messages_btn"-->
        <!--style="@style/btn_style"-->
        <!--android:text="@string/messages"-->
        <!--bootstrap:bb_type="primary"-->
        <!--bootstrap:bb_roundedCorners="true"-->
        <!--android:layout_marginTop="22sp"-->
        <!--/>-->


        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/exit_btn"
                style="@style/btn_style"
                android:text="@string/exit"
                bootstrap:bb_type="primary"
                bootstrap:bb_roundedCorners="true"
                android:layout_marginTop="22sp"
                />

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/users_btn"
                style="@style/btn_style"
                android:text="@string/users"
                bootstrap:bb_type="primary"
                bootstrap:bb_roundedCorners="true"
                android:layout_marginTop="22sp"
                />

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/patients_btn"
                style="@style/btn_style"
                android:text="@string/patients_list"
                bootstrap:bb_type="primary"
                bootstrap:bb_roundedCorners="true"
                android:layout_marginTop="22sp"
                />


</LinearLayout>
