<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding">


    <TextView
            android:id="@+id/title"
            style="@style/title_style"
            />


    <TextView
            android:id="@+id/detail"
            style="@style/title_style"
            android:gravity="right"
            />

    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/answer"
            android:hint="@string/answer"
            style="@style/edit_text_style"
            bootstrap:be_roundedCorners="true"
            bootstrap:be_state="primary"
            />

    <LinearLayout android:id="@+id/answerLayout"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="22sp">

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/approve"
                android:text="@string/approve"
                style="@style/btn_style"
                android:layout_marginRight="11sp"
                bootstrap:bb_icon_right="fa-check"
                bootstrap:bb_type="success"
                bootstrap:bb_roundedCorners="true"
                android:layout_weight="1"
                />
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/disapprove"
                android:text="@string/disapprove"
                style="@style/btn_style"
                android:layout_marginLeft="11sp"
                bootstrap:bb_icon_right="fa-close"
                bootstrap:bb_type="danger"
                bootstrap:bb_roundedCorners="true"
                android:layout_weight="1"
                />
    </LinearLayout>

</LinearLayout>
