<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/activity_padding"
              android:id="@+id/container">


    <TextView
            android:id="@+id/title"
            style="@style/title_style"
            />


    <TextView
            android:id="@+id/drugs"
            android:text="داروهای انتخاب شده:"
            style="@style/title_style"
            />



    <LinearLayout android:id="@+id/drugs_layout"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="22sp">

    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/select_drug"
            android:layout_marginRight="11sp"
            android:text="@string/select_drug"
            style="@style/btn_style"
            bootstrap:bb_roundedCorners="true"
            android:layout_marginTop="22sp"
            />


    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="22sp">

        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/approve"
                android:layout_marginRight="11sp"
                android:text="@string/approve"
                style="@style/btn_style"
                bootstrap:bb_icon_right="fa-check"
                bootstrap:bb_type="success"
                bootstrap:bb_roundedCorners="true"
                android:layout_weight="1"
                />
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/back"
                android:text="@string/back"
                android:layout_marginLeft="11sp"
                style="@style/btn_style"
                bootstrap:bb_icon_right="fa-arrow-left"
                bootstrap:bb_type="danger"
                bootstrap:bb_roundedCorners="true"
                android:layout_weight="1"
                />
    </LinearLayout>


</LinearLayout>
